js exectuti done

--- a/Javascript/DOM/elementceaion.html
+++ b/Javascript/DOM/elementceaion.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="inputt">
+    <input type="text" id="inputt">6ede
     <ul id="list">
       
     </ul>
